Kubernetes/Ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: ec2-35-172-139-81.compute-1.amazonaws.com
    http:
      paths:
      - path: /nginx_status
        pathType: Prefix
        backend:
          service:
            name: nginx-ingress
            port:
              number: 18080
